k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todo-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: demo.ashikhassan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-frontend
                port:
                  number: 3000
    - host: demo-api.ashikhassan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-backend
                port:
                  number: 4000
